# agent-memory

./: .gitignore  README.md  SOCIAL_POSTS.md  example.mcp.json  pyproject.toml
.github/workflows/: tests.yml
agentmemory/: __init__.py  async_store.py  cli.py  compression.py  dedup.py  mcp_server.py  store.py
agentmemory/adapters/: __init__.py  anthropic.py  autogen.py  crewai.py  langchain.py  openai.py
agentmemory/tiers/: __init__.py  episodic.py  semantic.py  working.py
examples/: async_agent.py  autogen_agent.py  basic_agent.py  crewai_agent.py  demo.py  langchain_agent.py  qdrant_agent.py
tests/: conftest.py  test_adapters.py  test_async_store.py  test_autogen_adapter.py  test_cli_agentmemory.py  test_compression.py  test_export_import.py  test_mcp_server.py  test_store.py
