[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmemory"
version = "0.1.0"
description = "Production-ready persistent memory for AI agents. Works with LangChain, CrewAI, AutoGen, and raw Anthropic/OpenAI SDKs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "memory", "llm", "langchain", "crewai", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — intentionally minimal
# sqlite3 is stdlib, no external DB required for episodic memory
dependencies = []

[project.optional-dependencies]
# Semantic memory (vector search)
chromadb = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.9.0"]

# Local embeddings (no API key needed)
local = ["sentence-transformers>=3.0.0"]

# LLM providers (for compression)
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]

# Framework adapters
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.55.0"]

# Recommended "batteries included" install
all = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.30.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/pinakimishra95/agent-memory"
Documentation = "https://github.com/pinakimishra95/agent-memory#readme"
Issues = "https://github.com/pinakimishra95/agent-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentmemory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
